# Dora

tauriFront/: WARP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tauriFront/src/: App.vue  main.ts  style.css  types.ts  vite-env.d.ts
tauriFront/src-tauri/: 2  Cargo.toml  tauri.conf.json
tauriFront/src-tauri/capabilities/: default.json
tauriFront/src-tauri/src/: lib.rs  main.rs
tauriFront/src/apps/: app-router.ts  trpc.js
tauriFront/src/apps/agent/: base-agent.ts  conversion-actor-agent.ts  coordinate-role-play.ts  dialogue-agent.ts  task-oriented-agent.ts  tools.ts  type.ts
tauriFront/src/apps/ai-sdk/: index.ts
tauriFront/src/apps/model/: chat-completion.ts
tauriFront/src/apps/prompt/: index.ts
tauriFront/src/apps/tauri-adapters/: browser-use.ts  window-manager.ts
tauriFront/src/apps/utils/: agent-message-handler.ts  filter-stream.ts  (+1 more)
tauriFront/src/components/: CodeBlock.vue  LogPanel.vue  MCPToolConfirmation.vue  MCPToolsManager.vue  MarkdownRenderer.vue  ModelDialog.vue  ModelSelector.vue  PlanStepsPanel.vue  SettingsDialog.vue  StudioPane.vue  SubTaskDisplay.vue  TaskModeSelector.vue  ToolCallDisplay.vue  UrlCarousel.vue
tauriFront/src/services/: cacheManager.ts  conversationStream.ts  database.ts  messageHandler.ts  multiAgentService.ts  openaiClient.ts  studioBus.ts  trpcClient.ts  windowControl.ts
tauriFront/src/stores/: chatStore.ts  mcpStore.ts  modelStore.ts  settingsStore.ts
tauriFront/src/test/: streaming-test.ts
tauriFront/src/utils/: messageParser.ts  urlGuards.ts
(+34 files in other folders)
